# Project-main

./: CMakeLists.txt  [Notebook] Cas de tests pour le Modèle linéaire et le PMC.ipynb  linear_classification.cpp  main.cpp  model.txt  recup_image_color.py  rezize_img.py  test_app.py
Application/: create_listTest.py  predict.py  presentation app.ipynb  resize.py  test_app.py  trainer.py
Application/.ipynb_checkpoints/: presentation app-checkpoint.ipynb
image/: main.py  readme.txt
image-valid/: readme.txt
learning/: readme.txt
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  python.py  test.py
lib/code/: MyMLP.h  SVM.cpp  linear_classification.cpp  model.txt  perceptron_multi_couche.cpp  perceptron_multi_couche_double.cpp  perceptron_multi_couche_double2.cpp
lib/lib_dll/: SVM.py  liblinear_classification.dylib  linear_regression.py  model.txt  multi_class.py  multi_class_linear.py  multi_cross.py  presentation cas de test.ipynb  test_cross.py  test_linear_class_simple.py  test_linear_classification.py  test_pmc.py  tester.py
lib/lib_dylib/: perceptron_multi_couche.dylib
preparation_des_donnee/: .~lock.Présentation.pptx#  Présentation PMC.ipynb  Présentation.pptx  create_listTest.py  know_size_image.py  model.txt  predict.py  prepareTest.py  presentation traitement de donnée.ipynb  recup_allcolor.py  recup_color_une_image.py  renamefile.py  resize_image.py  trainer.py  training_test.py  transformRGB.py
software/: CMakeLists.txt  Makefile  library.cpp  library.def  library.h  main.cpp  pmc.py  test.py
(+9 files in other folders)
